Fix site overflow and border style

--- a/src/pages/GamePage.css
+++ b/src/pages/GamePage.css
@@ -1,3 +1,7 @@
 .splitPaneBorder {
-    border: 7px solid red;
+    border: 5px solid black;
+}
+
+.hmm  {
+    height: calc(100vh - 64px) !important;
 }
